chore: added loading state for avoiding flicker

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  transition: 500ms;
 }
 
 .main {
